# speech-to-speech-realtime-translation

./: .env.example  .gitignore  README.md  llm.py  main.py  pyproject.toml  requirements.txt  stt_streaming.py  voice_synthesis.py
