[tool.poetry]
name = "speech-to-speech-realtime-translation"
version = "0.1.0"
description = ""
authors = ["Sumit Guha <sumit03guha@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.12.0"
elevenlabs = "^1.50.6"
langchain = "^0.3.17"
langchain-openai = "^0.3.3"
python-dotenv = "^1.0.1"
deepgram-sdk = "^3.8.0"
pyaudio = "^0.2.14"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
